--- a/Vagrantfile.vbox.win.erb
+++ b/Vagrantfile.vbox.win.erb
@@ -97,6 +97,7 @@ Vagrant.configure("2") do |config|
     Set-ItemProperty -Path \$regPath -Name "DefaultUsername" -Value "vagrant" -Type String
     Set-ItemProperty -Path \$regPath -Name "DefaultPassword" -Value "vagrant" -Type String
     Set-ItemProperty -Path \$regPath -Name "DefaultDomainName" -Value \$env:COMPUTERNAME -Type String
+    Restart-Computer -Force
 SHELL
 
   # setup GitLab Runner prerequisites
