--- a/Vagrantfile.tart.mac.erb
+++ b/Vagrantfile.tart.mac.erb
@@ -93,7 +93,7 @@ Vagrant.configure("2") do |config|
   # SHELL
 
   # setup GitLab Runner prerequisites
-  config.vm.provision "shell", inline: <<-SHELL
+  config.vm.provision "shell", privileged: false, inline: <<-SHELL
     /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
     brew install git git-lfs gitlab-runner
     git lfs install
